# CalBridge

./: .env-example  Claude.md  LICENSE  README.md  coverage.json  pyproject.toml
.github/workflows/: publish.yml
config/: logging_config.json  rate_limits.json  setup.json
docs/: CIRCULAR_VALIDATION.md  PLAN.md  PRD.md  PRD_apple_integration.md  PROMPTS_AND_COSTS.md  TODO.md
src/apple_sync/: __init__.py
src/apple_sync/agent/: cli.py  responses.py  tools.py
src/apple_sync/integration/: __init__.py  base.py  caldav_client.py  calendar_reader.py  calendar_writer.py  mock_store.py  permission_manager.py  reminder_reader.py  reminder_writer.py
src/apple_sync/sdk/: __init__.py  calendar_sdk.py
src/apple_sync/shared/: __init__.py  ical_builder.py  utils.py  validators.py
src/calbridge/: __init__.py
src/calbridge/agent/: __init__.py  cli.py  tools.py
src/calbridge/integration/: __init__.py  base.py  caldav_client.py  calendar_reader.py  calendar_writer.py  mock_store.py  permission_manager.py  reminder_reader.py  reminder_writer.py
src/calbridge/sdk/: __init__.py  reminder_sdk.py
src/calbridge/shared/: __init__.py  config_store.py  constants.py  validators.py  version.py
tests/: conftest.py
tests/fixtures/: mock_events.json  mock_reminders.json
tests/integration/: test_cli.py
tests/unit/: test_base_integration.py  test_caldav_client.py  test_calendar_reader.py  test_calendar_sdk.py  test_calendar_writer.py  test_config_store.py  test_ical_builders.py  test_live_path_stubs.py  test_mock_store.py  test_permission_manager.py  test_recurrence_alert_integration.py  test_reminder_sdk.py  test_reminder_writer.py  test_responses.py  test_tools.py  test_utils.py  test_utils_live_paths.py  test_validators.py
