[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calbridge"
version = "1.1.0"
description = "Headless Apple Calendar & Reminders integration for OpenClaw Agent"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dependencies = [
    "caldav>=1.3",
    "click>=8.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
calbridge = "calbridge.agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/calbridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=calbridge",
    "--cov-report=xml:coverage.xml",
    "--cov-report=json:coverage.json",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--cov-branch",
]

[tool.coverage.run]
source = ["calbridge"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "RET", "SIM"]
ignore = [
    "ANN401",  # Any is legitimately used for untyped caldav objects
    "S101",    # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[dependency-groups]
dev = [
    "click>=8.3.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
